# argon

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: database.rs  functions.rs  main.rs  models.rs  pages.rs
cli/: Cargo.toml
cli/src/: backend.rs  commands.rs  database.rs  functions.rs  main.rs  models.rs
migrations/2021-11-18-082258_init/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs
