[package]
name = "argon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = "0.1.7"
diesel = { version="1.4.8", features=["sqlite"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.10"
rocket_codegen = "0.4.10"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.71"
