[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
base32 = "0.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = "0.26.1"
serde_json = "1.0.72"
totp-rs = "0.6.4"
