[package]
name = "argon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
clap = "2.33.3"
dotenv = "0.15.0"
duration-string = "0.0.6"
indicatif = "0.16.2"
reqwest = { version = "0.11.6", features = ["json"] }
rusqlite = "0.26.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
totp-rs = "0.6.4"

[features]
